# study

./: README.md
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/: CMakeLists.txt
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/config/: config.yaml
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/data/2020-11-07-19-01-44/: accel-0.csv  att_euler-algo0_0.csv  att_quat-algo0_0.csv  gyro-0.csv  gyro_only_with_bias-0.csv  odo-0.csv  pos-algo0_0.csv  ref_att_quat.csv  ref_odo.csv  ref_pos.csv  ref_vel.csv  summary.txt  vel-algo0_0.csv
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/data/2020-11-07-20-45-00/: accel-0.csv  att_euler-algo0_0.csv  att_quat-algo0_0.csv  gyro-0.csv  odo-0.csv  pos-algo0_0.csv  summary.txt  vel-algo0_0.csv
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/data/2020-11-08-01-41-06/: accel-0.csv  accel_only_with_bias-0.csv  att_euler-algo0_0.csv  att_quat-algo0_0.csv  gyro-0.csv  gyro_only_with_bias-0.csv  odo-0.csv  pos-algo0_0.csv  ref_odo.csv  summary.txt  vel-algo0_0.csv
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/data/2020-11-08-01-49-17/: accel-0.csv  att_euler-algo0_0.csv  (+6 more)
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/include/: geom_function.h  ins_navigation.h  ins_navigation_interface.h
opensources_and_basic/sensor-fusion/第5章-惯性导航原理及误差分析/LZM_HIT第三章作业/Ins_Navigation/src/: ins_navigation.cpp  ins_navigation_interface.cpp  main.cpp
(+211 files in other folders)
